--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
-  text-align: center;
-  background-color: rgb(243, 189, 118);
+  background-color: #e7cca4;
 }
 
 .App-logo {
@@ -14,16 +13,7 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+
 
 .App-link {
   color: #61dafb;
@@ -40,7 +30,7 @@
 }
 
 .navbar{
-  background-color: rgb(243, 189, 118);
+  background-color: #e7cca4;
 }
 
 ul {
