--- a/src/home/home.css
+++ b/src/home/home.css
@@ -1,5 +1,5 @@
 .App {
-    text-align: center;
+    
 }
 
 .App-logo {
@@ -38,9 +38,7 @@
     }
 }
 
-.navbar {
-    background-color: rgb(243, 189, 118);
-}
+
 
 ul {
     list-style-type: none;
@@ -77,23 +75,31 @@ Link:hover {
     margin: auto;
 }
 
-/* Add keyframes for the bottom-to-top sliding effect */
 @keyframes slideUp {
     from {
-        opacity: 0;
+        
         transform: translateY(100px);
     }
     to {
-        opacity: 1;
         transform: translateY(0);
     }
 }
 
-.scroll-slide-up {
- 
-    transition:  transform 2s ease-in-out;
+.scroll-animate {
+    animation: slideUp 1s ease-out forwards;
 }
 
-.scroll-animate {
-    animation: slideUp 0.5s ease-out forwards;
+.carousel-item img {
+    object-fit: cover; 
+    height: 100vh;
+}
+
+.hori{
+    transition:  1s;
+    transform: translateY(-40px);
+    transition-timing-function:ease-out ;
+}
+
+.section-header.animate {
+    transition: top 0.15s ease-out;
 }
