--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
 }
 
 .navbar{
-  background-color: #e7cca4;
+  background-color: #4a2a1e;
 }
 
 ul {
@@ -48,7 +48,7 @@ li {
 
 .text{
   text-decoration: none;
-  color: brown;
+  color: #e7cca4;
   margin: 10px;
 }
 
