--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ li {
   margin: 2px;
 }
 
-.text{
+.text3{
   text-decoration: none;
   color: #e7cca4;
   margin: 10px;
@@ -70,5 +70,9 @@ Link:hover{
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
+}
+
+.toggler {
+  background-color: #e7cca4;
 }
 
