--- a/src/home/home.css
+++ b/src/home/home.css
@@ -55,11 +55,11 @@ li {
 
 .text2 {
     text-decoration: none;
-    color: brown;
+    color: #4A2A1E;
 }
 
 .text1{
-    color: brown;
+    color: #4A2A1E;
 }
 
 Link {
