--- a/src/productDetail/productDetail.css
+++ b/src/productDetail/productDetail.css
@@ -1,6 +1,3 @@
-.image{
-}
-
 .title{
     color:#4A2A1E;
     font-size: 3rem;
@@ -15,10 +12,17 @@
 .discountPrice{
     color:#4A2A1E;
 }
+
 .price{
     color:#4A2A1E;
 }
+
 .content{
-    color:#4A2A1E;
-    
+    color:#4A2A1E;  
 }
+
+@media (min-width: 576px) { 
+    .w-100{
+        width:100%
+    }
+ }
