--- a/src/App.css
+++ b/src/App.css
@@ -80,3 +80,10 @@ Link:hover{
   background-color:#caac80;
 }
 
+.cartCount{
+  transform: translateY(-100%);
+  background-color: #4a2a1e;
+  width: 90%;
+    height: 70%;;
+}
+
